--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "create-odoc-site",
-  "version": "0.0.151",
+  "name": "@HelipengTony/create-odoc-site",
+  "version": "0.0.1",
   "main": "index.js",
   "author": "HelipengTony <tony.hlp@hotmail.com>",
   "license": "MIT",
